# RPSLS

./: .gitignore  README.md  justfile  pyproject.toml
game/core/: cli.py  rpsls.py
game/data/: game_data.yaml  game_schema.json  specs.py
game/styles/: textures.py
